--- a/public/templates/event/detail-events.html
+++ b/public/templates/event/detail-events.html
@@ -66,8 +66,8 @@
 
                 <dl>
                     <dt translate >ADRESSE</dt>
-                    <dd>{{event.adresse.boite_postale}} {{event.adresse.adresse}}</dd>
-                    <dd>{{event.adresse.rue}}</dd>
+                    <dd>{{event.adress.post_box}} {{event.adress.name}}</dd>
+                    <dd>{{event.adress.street}}</dd>
                     <dd>{{event.town.name}}</dd>
                     <dd>{{event.town.country.name}}</dd>
 
