--- a/public/templates/event/liste.html
+++ b/public/templates/event/liste.html
@@ -24,7 +24,7 @@
                 <div class="item-9" ui-sref="details({nom:e.name+'/'+e.id})">
                     <div class="date">du {{e.date_debut}} au {{e.date_fin}}</div>
                     <div class="titre">{{e.name}}</div>
-                    <div class="lieu" style="position: absolute;bottom: 0;">{{e.town.name}}, {{e.town.country.name}}</div>
+                    <div class="lieu" style="position: absolute;bottom: 0;">{{e.adress.name}}, {{e.town.name}}</div>
                 </div>
                 <div class="card-action">
                     <div class="tag">
