--- a/public/templates/home/content.html
+++ b/public/templates/home/content.html
@@ -70,7 +70,7 @@
                         <div class="date">{{e.date_debut}}</div>
                         <div class="titre">
                             {{e.name|limitTo:50}}</div>
-                        <div class="lieu">{{e.town.name}}, {{e.town.country.name}}</div>
+                        <div class="lieu">{{e.adress.name}}, {{e.town.name}}</div>
                     </div>
 
                     <div class="card-action">
