--- a/public/templates/user/profil.html
+++ b/public/templates/user/profil.html
@@ -5,12 +5,7 @@
                 <h1>Profil d'organisateur</h1>
             </div>
             <div class="col-lg-4 col-sm-4 col-md-4" style="padding-top: 20px">
-                <select ng-model="organisateur.who"
-                        class="form-control"
-                        ng-options="u.nom as u.nom for u in users"
-                        >
-                    <option value="" disabled ng-click="nouveauOrganisateur()">Créer organisateur</option>
-                </select>
+                <button class="btn btn-main btn-reverse">Créér un profil d'organisateur</button>
             </div>
         </div>
         <div class="row">
