--- a/public/templates/static/header.html
+++ b/public/templates/static/header.html
@@ -23,7 +23,7 @@
                     <li class="" ng-if="!loguer"><a href="#" ui-sref="register"><span translate >Ouvrir un compte</span></a></li>
                     <li class="" ng-if="!loguer"><a href="#" ui-sref="login"><span translate >Se connecter</span></a></li>
                     <li class="dropdown" ng-if="loguer">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="/#"><i class="fa fa-user"></i>&nbsp;
+                        <a class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>&nbsp;
                             <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>
